Test and Patient done crud with swagger api documentaion
