# src/lib/swagger/swagger.json
@@ -9,6 +9,7 @@
       }
     ]
   },
+
   "tags": [
     {
       "name": "Users",
@@ -19,8 +20,8 @@
       "description": "Endpoint related to Tests"
     },
     {
-      "name":"patient",
-      "description":"Shows patient information"
+      "name": "Patients",
+      "description": "Shows patient information"
     }
   ],
   "paths": {
@@ -485,6 +486,232 @@
           }
         }
       }
+    },
+    "/patients": {
+      "get": {
+        "tags": ["Patients"],
+        "summary": "List Patients",
+        "description": "List Patients",
+        "operationId": "getPatients",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/PageFilter"
+          },
+          {
+            "$ref": "#/components/parameters/PerPageFilter"
+          },
+          {
+            "$ref": "#/components/parameters/SortFilter"
+          },
+          {
+            "$ref": "#/components/parameters/FieldsFilter"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully list Patients",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PatientListResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/ResourceNotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/UnprocessableEntity"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Patients"],
+        "summary": "Create Patient",
+        "description": "Create Patient",
+        "operationId": "createPatient",
+        "requestBody": {
+          "description": "Patient creation Payload",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PatientsPostRequestBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Successfully created an Patient",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PatientResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/UnprocessableEntity"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/patients/{id}": {
+      "get": {
+        "tags": ["Patients"],
+        "summary": "Read a Patient",
+        "description": "Read a Patient",
+        "operationId": "getPatient",
+        "parameters": [
+          { "$ref": "#/components/parameters/FieldsFilter" },
+          {
+            "$ref": "#/components/parameters/PatientIdParam"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully read the Patient",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PatientResponseBody"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/ResourceNotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/UnprocessableEntity"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "patch": {
+        "tags": ["Patients"],
+        "summary": "Update a Patient",
+        "description": "Update a Patient",
+        "operationId": "updatePatient",
+        "parameters": [{ "$ref": "#/components/parameters/PatientIdParam" }],
+        "requestBody": {
+          "description": "Update a Patient",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PatientPatchRequestBody"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "204": {
+            "description": "Successfully updated the Patient"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/ResourceNotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/UnprocessableEntity"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Patients"],
+        "summary": "Delete a Patient",
+        "description": "Delete a Patient",
+        "operationId": "deletePatient",
+        "parameters": [{ "$ref": "#/components/parameters/PatientIdParam" }],
+        "responses": {
+          "204": {
+            "description": "Successfully deleted the Patient"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/ResourceNotFound"
+          },
+          "409": {
+            "$ref": "#/components/responses/Conflict"
+          },
+          "422": {
+            "$ref": "#/components/responses/UnprocessableEntity"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -774,19 +1001,118 @@
           },
           "isActive": {
             "type": "boolean",
-            "example": "True"
+            "example": true
           },
           "price": {
             "type": "number",
             "example": 3400
           },
           "measurement": {
-            "type": "array",
-            "example": "Hello World"
+            "type": "object",
+            "example": { "hello": "world" }
           }
         }
       },
       "ResourceTimestampsofTest": {
+        "type": "object",
+        "properties": {
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "PatientListResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Patient"
+            }
+          },
+          "metadata": {
+            "$ref": "#/components/schemas/Meta"
+          }
+        }
+      },
+      "PatientsPostRequestBody": {
+        "$ref": "#/components/schemas/CreatePatientAttributes"
+      },
+      "PatientPatchRequestBody": {
+        "$ref": "#/components/schemas/PatientAttributes"
+      },
+      "PatientResponseBody": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/Patient"
+          },
+          "meta": {
+            "$ref": "#/components/schemas/BasicMeta"
+          }
+        }
+      },
+
+      "CreatePatientAttributes": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/PatientAttributes"
+          },
+          {
+            "type": "object",
+            "required": ["homeVisit", "userId", "testId"]
+          }
+        ]
+      },
+      "Patient": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/PatientAttributes"
+          },
+          {
+            "$ref": "#/components/schemas/ResourceTimestampsofPatient"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer"
+              }
+            },
+            "required": [
+              "id",
+              "homeVisit",
+              "userId",
+              "testId",
+              "createdAt",
+              "updatedAt"
+            ]
+          }
+        ]
+      },
+      "PatientAttributes": {
+        "type": "object",
+        "properties": {
+          "homeVisit": {
+            "type": "boolean",
+            "example": true
+          },
+          "userId": {
+            "type": "number",
+            "example": 1
+          },
+          "testId": {
+            "type": "number",
+            "example": 2
+          }
+        }
+      },
+      "ResourceTimestampsofPatient": {
         "type": "object",
         "properties": {
           "createdAt": {
@@ -811,6 +1137,15 @@
         }
       },
       "TestIdParam": {
+        "name": "id",
+        "in": "path",
+        "description": "Id of Test",
+        "required": true,
+        "schema": {
+          "type": "integer"
+        }
+      },
+      "PatientIdParam": {
         "name": "id",
         "in": "path",
         "description": "Id of Test",
