# src/routes/route.js
@@ -4,8 +4,8 @@ import testRoute from "./tests/test.route.js";
 import patientRoute from "./patient/patient.route.js";
 const route = express.Router();
 
-route.use("/user", userRoute);
+route.use("/users", userRoute);
 route.use("/tests", testRoute);
-route.use("/patients",patientRoute);
+route.use("/patients", patientRoute);
 
 export default route;
